fix cajas modulos md overlap metodologia

--- a/styles/_ruta.scss
+++ b/styles/_ruta.scss
@@ -189,9 +189,12 @@ html #mr-nav {
         width: 26%;
         top: -5rem;
         a {
-            padding: 40px 20px;
+            padding: 40px 18px;
             margin-top: -3%;
         }
+    }
+    .home-ruta #page-header #page-mast #course-toc #chapters li:nth-child(3){
+        margin-top:2rem;
     }
 }
 
