--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -67,7 +67,7 @@ div#page {
 }
 
 section#coursetools {
-    padding: 3rem 15%;
+    padding: 0 15%;
     div#coursetools-list {
         display: flex;
         flex-wrap: wrap;
